rg3t el design mn est5dam el sdp w el ssp lel 3adi

--- a/app/src/main/res/layout/activity_add_cause.xml
+++ b/app/src/main/res/layout/activity_add_cause.xml
@@ -7,7 +7,6 @@
     android:background="@drawable/backgroundall"
     tools:context="com.example.amr.sunbula.AddCauseActivity">
 
-
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -32,8 +31,8 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/image_addcause"
-            android:layout_width="@dimen/_120sdp"
-            android:layout_height="@dimen/_120sdp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:layout_marginTop="8dp"
             android:src="@drawable/circle_shape"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -44,12 +43,12 @@
             android:id="@+id/txt_to_changeimage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/_8sdp"
-            android:layout_marginEnd="@dimen/_8sdp"
-            android:layout_marginLeft="@dimen/_8sdp"
-            android:layout_marginRight="@dimen/_8sdp"
-            android:layout_marginStart="@dimen/_8sdp"
-            android:layout_marginTop="@dimen/_8sdp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:text="Upload image"
             android:textColor="#AAffffff"
             app:layout_constraintBottom_toBottomOf="@+id/image_addcause"
@@ -61,11 +60,11 @@
             android:id="@+id/txt_add_description_addcause"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/_8sdp"
-            android:layout_marginLeft="@dimen/_8sdp"
-            android:layout_marginRight="@dimen/_8sdp"
-            android:layout_marginStart="@dimen/_8sdp"
-            android:layout_marginTop="@dimen/_8sdp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/rectangle_shape_in_addcause"
             android:gravity="top|left"
             android:hint="Enter here"
@@ -73,7 +72,7 @@
             android:lines="8"
             android:maxLines="6"
             android:minLines="5"
-            android:padding="@dimen/_8sdp"
+            android:padding="8dp"
             android:scrollbars="vertical"
             android:textStyle="bold"
             app:layout_constraintHorizontal_bias="0.0"
@@ -85,11 +84,11 @@
             android:id="@+id/txt_des"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/_8sdp"
-            android:layout_marginLeft="@dimen/_8sdp"
-            android:layout_marginRight="@dimen/_8sdp"
-            android:layout_marginStart="@dimen/_8sdp"
-            android:layout_marginTop="@dimen/_8sdp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:text="Description"
             android:textStyle="bold"
             app:layout_constraintHorizontal_bias="0.025"
@@ -101,9 +100,9 @@
             android:id="@+id/image_amount_addcause"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_16sdp"
-            android:layout_marginStart="@dimen/_16sdp"
-            android:layout_marginTop="@dimen/_16sdp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_add_description_addcause"
             app:srcCompat="@drawable/amount" />
@@ -112,23 +111,24 @@
             android:id="@+id/amount_addcause"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_16sdp"
-            android:layout_marginRight="@dimen/_8sdp"
-            android:layout_marginStart="@dimen/_16sdp"
-            android:layout_marginTop="@dimen/_18sdp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="20dp"
             android:background="@null"
             android:hint="Amount"
             android:inputType="textPersonName"
             android:textStyle="bold"
             app:layout_constraintLeft_toRightOf="@+id/image_amount_addcause"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_add_description_addcause" />
+            app:layout_constraintTop_toBottomOf="@+id/txt_add_description_addcause"
+            app:layout_constraintHorizontal_bias="0.0" />
 
         <View
             android:id="@+id/v1"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:layout_marginTop="@dimen/_8sdp"
+            android:layout_marginTop="8dp"
             android:background="@color/tab_enable"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -139,9 +139,9 @@
             android:id="@+id/category_addcause"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_16sdp"
-            android:layout_marginStart="@dimen/_16sdp"
-            android:layout_marginTop="@dimen/_16sdp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/v1"
             app:srcCompat="@drawable/category" />
@@ -150,9 +150,9 @@
             android:id="@+id/spinner_Categories"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_8sdp"
-            android:layout_marginRight="@dimen/_8sdp"
-            android:layout_marginTop="@dimen/_16sdp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toRightOf="@+id/category_addcause"
             app:layout_constraintRight_toRightOf="parent"
@@ -162,7 +162,7 @@
             android:id="@+id/v2"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:layout_marginTop="@dimen/_8sdp"
+            android:layout_marginTop="8dp"
             android:background="@color/tab_enable"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -173,8 +173,8 @@
             android:id="@+id/imageView_calendar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_16sdp"
-            android:layout_marginTop="@dimen/_16sdp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/v2"
             app:srcCompat="@drawable/calendar" />
@@ -184,16 +184,18 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:layout_marginLeft="@dimen/_16sdp"
-            android:layout_marginRight="@dimen/_8sdp"
-            android:layout_marginTop="@dimen/_18sdp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="20dp"
             android:hint="End date"
-            android:textSize="@dimen/_15ssp"
+            android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/imageView_calendar"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/v2" />
+            app:layout_constraintTop_toBottomOf="@+id/v2"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="0.0" />
 
 
     </android.support.constraint.ConstraintLayout>
