--- a/app/src/main/res/layout/item_in_recieve_message.xml
+++ b/app/src/main/res/layout/item_in_recieve_message.xml
@@ -9,9 +9,9 @@
         android:id="@+id/recieve_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_8sdp"
-        android:layout_marginRight="@dimen/_24sdp"
-        android:layout_marginTop="@dimen/_8sdp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginTop="8dp"
         android:text="2 min ago"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -22,10 +22,10 @@
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/message_recieve_pic"
         android:layout_width="0dp"
-        android:layout_height="@dimen/_50sdp"
-        android:layout_marginBottom="@dimen/_8sdp"
-        android:layout_marginLeft="@dimen/_8sdp"
-        android:layout_marginTop="@dimen/_8sdp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
         android:layout_weight="1"
         android:src="@drawable/avatar"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -37,10 +37,10 @@
         android:id="@+id/linearLayout16"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_8sdp"
-        android:layout_marginLeft="@dimen/_8sdp"
-        android:layout_marginRight="@dimen/_8sdp"
-        android:layout_marginTop="@dimen/_8sdp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
         android:layout_weight="1"
         android:background="@drawable/message_recieve"
         android:orientation="vertical"
@@ -54,13 +54,13 @@
             android:id="@+id/recieve_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/_8sdp"
-            android:paddingLeft="@dimen/_24sdp"
-            android:paddingRight="@dimen/_8sdp"
-            android:paddingTop="@dimen/_8sdp"
+            android:paddingBottom="8dp"
+            android:paddingLeft="24dp"
+            android:paddingRight="8dp"
+            android:paddingTop="8dp"
             android:text="Amr Abdelhameed Abuelkhair"
             android:textColor="@color/tab_enable"
-            android:textSize="@dimen/_12ssp"
+            android:textSize="12sp"
             android:textStyle="bold" />
 
     </LinearLayout>
