--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,11 +13,11 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imagelogin"
-            android:layout_width="@dimen/_120sdp"
-            android:layout_height="@dimen/_120sdp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
-            android:layout_marginTop="@dimen/_8sdp"
+            android:layout_marginTop="8dp"
             android:src="@drawable/logo"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -29,10 +29,10 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
-            android:layout_marginTop="@dimen/_8sdp"
+            android:layout_marginTop="8dp"
             android:text="Get involved"
             android:textColor="#ffffff"
-            android:textSize="@dimen/_25ssp"
+            android:textSize="25sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -44,10 +44,10 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
-            android:layout_marginTop="@dimen/_24sdp"
+            android:layout_marginTop="24dp"
             android:background="#BB000000"
             android:orientation="vertical"
-            android:padding="@dimen/_8sdp"
+            android:padding="8dp"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -56,17 +56,17 @@
             <EditText
                 android:id="@+id/txtemaillogin"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_50sdp"
+                android:layout_height="50dp"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal|top"
-                android:layout_marginBottom="@dimen/_5sdp"
+                android:layout_marginBottom="5dp"
                 android:background="@null"
                 android:drawableLeft="@drawable/mail"
-                android:drawablePadding="@dimen/_15sdp"
+                android:drawablePadding="15dp"
                 android:gravity="left"
                 android:hint="Email"
                 android:inputType="textEmailAddress"
-                android:padding="@dimen/_15sdp"
+                android:padding="15dp"
                 android:textStyle="bold" />
 
             <View
@@ -77,16 +77,16 @@
             <EditText
                 android:id="@+id/txtpasswordlogin"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_50sdp"
+                android:layout_height="50dp"
                 android:layout_gravity="center_horizontal|top"
-                android:layout_marginBottom="@dimen/_5sdp"
+                android:layout_marginBottom="5dp"
                 android:background="@null"
                 android:drawableLeft="@drawable/password"
-                android:drawablePadding="@dimen/_15sdp"
+                android:drawablePadding="15dp"
                 android:gravity="left"
                 android:hint="Password"
                 android:inputType="textPassword"
-                android:padding="@dimen/_15sdp"
+                android:padding="15dp"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -99,7 +99,7 @@
             android:layout_marginTop="8dp"
             android:text="Forget Passowrd"
             android:textColor="@color/colorAccent"
-            android:textSize="@dimen/_14ssp"
+            android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout"
@@ -108,11 +108,11 @@
 
         <ImageButton
             android:id="@+id/btn_login"
-            android:layout_width="@dimen/_75sdp"
-            android:layout_height="@dimen/_75sdp"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
-            android:layout_marginTop="@dimen/_8sdp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/oragnecircal"
             android:src="@drawable/download_right"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -123,14 +123,14 @@
             android:id="@+id/txt_toregister"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/_8sdp"
+            android:layout_marginBottom="8dp"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
-            android:layout_marginTop="@dimen/_8sdp"
+            android:layout_marginTop="8dp"
             android:gravity="center"
             android:text="Don't have ana accounts?Sign Up"
             android:textColor="@color/colorAccent"
-            android:textSize="@dimen/_15ssp"
+            android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
