--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -13,11 +13,11 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imageresetpassword"
-            android:layout_width="@dimen/_120sdp"
-            android:layout_height="@dimen/_120sdp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
-            android:layout_marginTop="@dimen/_8sdp"
+            android:layout_marginTop="8dp"
             android:src="@drawable/logo"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -31,10 +31,10 @@
             android:layout_gravity="center"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
-            android:layout_marginTop="@dimen/_8sdp"
+            android:layout_marginTop="8dp"
             android:text="Forget password?"
             android:textColor="#ffffff"
-            android:textSize="@dimen/_25ssp"
+            android:textSize="25sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -47,10 +47,10 @@
             android:layout_gravity="center"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
-            android:layout_marginTop="@dimen/_8sdp"
+            android:layout_marginTop="8dp"
             android:text="you can reset password."
             android:textColor="@color/colorAccent"
-            android:textSize="@dimen/_15ssp"
+            android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -62,10 +62,10 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
-            android:layout_marginTop="@dimen/_24sdp"
+            android:layout_marginTop="24dp"
             android:background="#BB000000"
             android:orientation="vertical"
-            android:padding="@dimen/_8sdp"
+            android:padding="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textcanreset">
@@ -73,17 +73,17 @@
             <EditText
                 android:id="@+id/txtemailresetpassword"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_50sdp"
+                android:layout_height="50dp"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal|top"
-                android:layout_marginBottom="@dimen/_5sdp"
+                android:layout_marginBottom="5dp"
                 android:background="@null"
                 android:drawableLeft="@drawable/message"
-                android:drawablePadding="@dimen/_15sdp"
+                android:drawablePadding="15dp"
                 android:gravity="left"
                 android:hint="Enter your email"
                 android:inputType="textEmailAddress"
-                android:padding="@dimen/_15sdp"
+                android:padding="15dp"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -91,15 +91,15 @@
         <Button
             android:id="@+id/btn_resetpassword"
             android:layout_width="0dp"
-            android:layout_height="@dimen/_75sdp"
-            android:layout_marginBottom="@dimen/_8sdp"
+            android:layout_height="75dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
             android:layout_marginTop="0dp"
             android:background="@color/colorAccent"
             android:text="Request password reset"
             android:textAllCaps="false"
-            android:textSize="@dimen/_20ssp"
+            android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
