--- a/app/src/main/res/layout/item_in_home.xml
+++ b/app/src/main/res/layout/item_in_home.xml
@@ -25,12 +25,12 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="0dp"
         android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
+        android:layout_marginRight="32dp"
         android:background="@drawable/rectangle_shape"
-        android:padding="@dimen/_10sdp"
+        android:padding="10dp"
         android:text="hhhhhhhhhhhhhhhhhhhhhhhhh"
         android:textColor="#ffffff"
-        android:textSize="@dimen/_12ssp"
+        android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.025"
