--- a/app/src/main/res/layout/item_in_list_categories.xml
+++ b/app/src/main/res/layout/item_in_list_categories.xml
@@ -8,14 +8,14 @@
 
     <Button
         android:id="@+id/rectangle_3"
-        android:layout_width="@dimen/_15sdp"
-        android:layout_height="@dimen/_15sdp"
-        android:layout_marginBottom="@dimen/_8sdp"
-        android:layout_marginLeft="@dimen/_8sdp"
-        android:layout_marginRight="@dimen/_8sdp"
-        android:layout_marginTop="@dimen/_8sdp"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/rectangle_3"
-        android:textSize="@dimen/_11ssp"
+        android:textSize="11sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.915"
         app:layout_constraintLeft_toRightOf="@+id/linearLayout8"
@@ -25,24 +25,25 @@
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/category_image"
         android:layout_width="0dp"
-        android:layout_height="@dimen/_50sdp"
-        android:layout_marginBottom="@dimen/_8sdp"
-        android:layout_marginLeft="@dimen/_8sdp"
-        android:layout_marginStart="@dimen/_8sdp"
-        android:layout_marginTop="@dimen/_8sdp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_weight="1"
         android:src="@drawable/layer_15"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <LinearLayout
         android:id="@+id/linearLayout8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_8sdp"
-        android:layout_marginLeft="@dimen/_8sdp"
-        android:layout_marginTop="@dimen/_8sdp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
         android:layout_weight="1"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -55,7 +56,7 @@
             android:layout_height="wrap_content"
             android:text="Medical,Health,Scientific research"
             android:textColor="@color/colorAccent"
-            android:textSize="@dimen/_12ssp"
+            android:textSize="12sp"
             android:textStyle="bold" />
 
         <TextView
@@ -63,7 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Small text about the category"
-            android:textSize="@dimen/_11ssp"
+            android:textSize="11sp"
             android:textStyle="bold" />
     </LinearLayout>
 
