--- a/app/src/main/res/layout/item_in_send_message.xml
+++ b/app/src/main/res/layout/item_in_send_message.xml
@@ -9,9 +9,9 @@
         android:id="@+id/sender_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_8sdp"
-        android:layout_marginLeft="@dimen/_24sdp"
-        android:layout_marginTop="@dimen/_8sdp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="8dp"
         android:text="just now"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -21,10 +21,10 @@
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/message_sender_pic"
         android:layout_width="0dp"
-        android:layout_height="@dimen/_50sdp"
-        android:layout_marginBottom="@dimen/_8sdp"
-        android:layout_marginRight="@dimen/_8sdp"
-        android:layout_marginTop="@dimen/_8sdp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
         android:layout_weight="1"
         android:src="@drawable/avatar"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -36,10 +36,10 @@
         android:id="@+id/linearLayout6"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_8sdp"
-        android:layout_marginLeft="@dimen/_8sdp"
-        android:layout_marginRight="@dimen/_8sdp"
-        android:layout_marginTop="@dimen/_8sdp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
         android:layout_weight="1"
         android:background="@drawable/message_send"
         android:orientation="vertical"
@@ -52,13 +52,13 @@
             android:id="@+id/sender_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/_8sdp"
-            android:paddingLeft="@dimen/_8sdp"
-            android:paddingRight="@dimen/_24sdp"
-            android:paddingTop="@dimen/_8sdp"
+            android:paddingBottom="8dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="24dp"
+            android:paddingTop="8dp"
             android:text="Amr Abdelhameed Abuelkhair"
             android:textColor="@color/colorPrimary"
-            android:textSize="@dimen/_12ssp"
+            android:textSize="12sp"
             android:textStyle="bold" />
 
     </LinearLayout>
