--- a/app/src/main/res/layout/item_in_causes.xml
+++ b/app/src/main/res/layout/item_in_causes.xml
@@ -86,8 +86,8 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/image_cause"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:layout_marginTop="8dp"
         android:src="@drawable/layer_2"
         app:layout_constraintLeft_toLeftOf="parent"
